--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.22",
     "geist": "^1.5.1",
     "lucide-react": "^0.511.0",
     "next": "latest",
