--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-is": "^19.2.0",
     "recharts": "^2.15.4",
+    "sweetalert2": "^11.23.0",
     "tailwind-merge": "^3.3.0",
     "uuid": "^13.0.0"
   },
