--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
     "react-is": "^19.2.0",
